syntax = "proto3";
package api.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "api/v1/user.proto";

message Session {
  string id = 1;
  google.protobuf.Timestamp created = 2;
  google.protobuf.Timestamp updated = 3;

  SessionType type = 4;
  SessionStatus status = 5;
  optional string location = 6;
  google.protobuf.Timestamp start_time = 7;
  google.protobuf.Duration duration = 8;
  optional string description = 9;

  string tutor_id = 10;
  Attendance tutor_attendance = 11;
  uint32 tutor_rating = 12;
  optional string tutor_notes = 13;
  User tutor = 18;

  string tutee_id = 14;
  Attendance tutee_attendance = 15;
  uint32 tutee_rating = 16;
  optional string tutee_notes = 17;
  User tutee = 19;
}

enum SessionType {
  SESSION_TYPE_UNSPECIFIED = 0;
  SESSION_TYPE_CAMPUS = 1;
  SESSION_TYPE_VIRTUAL = 2;
}

enum SessionStatus {
  SESSION_STATUS_UNSPECIFIED = 0;
  SESSION_STATUS_AWAITING_TUTOR_APPROVAL = 1;
  SESSION_STATUS_AWAITING_TUTEE_APPROVAL = 2;
  SESSION_STATUS_DECLINED = 3;
  SESSION_STATUS_CONFIRMED = 4;
  SESSION_STATUS_COMPLETED = 5;
  SESSION_STATUS_CANCELED = 6;
}

enum Attendance {
  ATTENDANCE_UNSPECIFIED = 0;
  ATTENDANCE_PRESENT = 1;
  ATTENDANCE_LATE = 2;
  ATTENDANCE_EXCUSED = 3;
  ATTENDANCE_NOSHOW = 4;
  ATTENDANCE_CANCELED = 5;
}
